Complete initial security support

--- a/src/main/resources/com/peergreen/security/internal/realm/groups.properties
+++ b/src/main/resources/com/peergreen/security/internal/realm/groups.properties
@@ -14,5 +14,6 @@
 # limitations under the License.
 #
 
-admin platform-admin,platform-user
-#guest platform-user
+platform-admin admin
+platform-user admin
+#platform-user admin, guest
