PGK-83 Update to iPOJO 1.10.1
* Added staging repository when necessary
* Improved reliability of integration tests (wait for iPOJO to finish activation of component and instances before performing the tests)

--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
           <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>bnd-ipojo-plugin</artifactId>
-            <version>1.9.0-SNAPSHOT</version>
+            <version>1.10.1</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -131,5 +131,15 @@
       <snapshots><enabled>false</enabled></snapshots>
     </repository>
   </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <!-- TODO remove when iPOJO 1.10.1 will be promoted -->
+      <id>apache-felix-ipojo-plugin</id>
+      <name>Apache Felix iPOJO Staging Repository</name>
+      <url>https://repository.apache.org/content/repositories/orgapachefelix-021/</url>
+      <snapshots><enabled>false</enabled></snapshots>
+    </pluginRepository>
+  </pluginRepositories>
 
 </project>
