--- a/pom.xml
+++ b/pom.xml
@@ -54,19 +54,19 @@
     <dependency>
       <groupId>org.ow2.util.base64</groupId>
       <artifactId>base64</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.peergreen.security</groupId>
       <artifactId>security-api</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.peergreen.configuration</groupId>
       <artifactId>configuration-simple</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>0.0.1</version>
       <scope>provided</scope>
     </dependency>
 
@@ -118,11 +118,6 @@
   </build>
 
   <repositories>
-    <repository>
-      <id>ow2.snapshots</id>
-      <url>http://repository.ow2.org/nexus/content/repositories/snapshots/</url>
-      <releases><enabled>false</enabled></releases>
-    </repository>
     <repository>
       <id>peergreen.release</id>
       <name>Peergreen Release Nexus</name>
