--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
   <groupId>com.peergreen.security</groupId>
   <artifactId>security-base</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   <packaging>bundle</packaging>
 
   <name>Peergreen Security Base</name>
@@ -32,7 +32,7 @@
     <connection>scm:git:https://forge.peergreen.com/git/git/security/security-base.git</connection>
     <developerConnection>scm:git:https://forge.peergreen.com/git/git/security/security-base.git</developerConnection>
     <url>https://forge.peergreen.com/git/summary/?r=security/security-base.git</url>
-    <tag>HEAD</tag>
+    <tag>SECURITY_BASE_1_0_1</tag>
   </scm>
 
   <dependencies>
